--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "bundle/ag.vim"]
-path = bundle/ag.vim
-url = https://github.com/rking/ag.vim
+[submodule "bundle/vundle"]
+path = bundle/vundle
+url = https://github.com/gmarik/Vundle.vim
