--- a/.gitmodules
+++ b/.gitmodules
@@ -6,6 +6,38 @@ url = https://github.com/gmarik/Vundle.vim
 path = bundle/ctrlp.vim
 url = https://github.com/kien/ctrlp.vim
 
+[submodule "bundle/vim-javascript"]
+path = bundle/vim-javascript
+url = https://github.com/pangloss/vim-javascript
+
+[submodule "bundle/vim-javascript"]
+path = bundle/vim-javascript-syntax
+url = https://github.com/jalera/vim-javascript-syntax
+
+[submodule "bundle/ir_black"]
+path = bundle/ir_black
+url = https://github.com/twerth/ir_black
+
+[submodule "bundle/vim-irblack"]
+path = bundle/vim-irblack
+url = https://github.com/twerth/ir_black
+
+[submodule "bundle/moria"]
+path = bundle/moria
+url = https://github.com/vim-scripts/moria
+
+[submodule "bundle/solarized"]
+path = bundle/solarized
+url = https://github.com/altercation/vim-colors-solarized
+
+[submodule "bundle/vim-atom-dark"]
+path = bundle/vim-atom-dark
+url = https://github.com/gosukiwi/vim-atom-dark
+
+[submodule "bundle/vim-colors-solarized"]
+path = bundle/vim-colors-solarized
+url = https://github.com/altercation/vim-colors-solarized
+
 [submodule "bundle/nerdtree"]
 path = bundle/nerdtree
 url = https://github.com/scrooloose/nerdtree
@@ -21,10 +53,6 @@ url = https://github.com/terryma/vim-multiple-cursors
 [submodule "bundle/vim-tomorrow-theme"]
 path = bundle/vim-tomorrow-theme
 url = https://github.com/chriskempson/vim-tomorrow-theme
-
-[submodule "bundle/vim-colors-solarized"]
-path = bundle/vim-colors-solarized
-url = https://github.com/altercation/vim-colors-solarized
 
 [submodule "bundle/base16-vim"]
 path = bundle/base16-vim
