--- a/.gitmodules
+++ b/.gitmodules
@@ -25,7 +25,7 @@ url = https://github.com/altercation/vim-colors-solarized
 
 [submodule "bundle/nerdtree"]
 path = bundle/nerdtree
-url = https://github.com/scrooloose/nerdtree
+url = https://github.com/scrooloose/nerdtree.git
 
 [submodule "bundle/nerdcommenter"]
 path = bundle/nerdcommenter
