--- a/.gitmodules
+++ b/.gitmodules
@@ -26,6 +26,7 @@ url = https://github.com/altercation/vim-colors-solarized
 [submodule "bundle/nerdtree"]
 path = bundle/nerdtree
 url = https://github.com/scrooloose/nerdtree.git
+ignore = untracked
 
 [submodule "bundle/nerdcommenter"]
 path = bundle/nerdcommenter
