Performance optimization between Coc+ale+gitgutter, plus other features

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,3 +1,5 @@
 {
-    "coc.preferences.diagnostic.displayByAle": true
+    "diagnostic.enable": false,
+    "diagnostic.enableSign": true,
+    "diagnostic.enableMessage": "always"
 }
