--- a/coc-settings.json
+++ b/coc-settings.json
@@ -32,5 +32,7 @@
             }
         }
     },
-    "git.enableGutters": true
+    "git.enableGutters": true,
+    "suggest.enablePreselect": false,
+    "suggest.noselect": true
 }
